[package]
name = "gecko-media"
version = "0.1.0"
authors = ["Chris Pearce <cpearce@mozilla.com>", "Philippe Normand <philn@igalia.com>"]
build = "build.rs"

[build]
rustflags = ["-C link-arg=-fno-exceptions"]

[target.'cfg(unix)'.dependencies]
cubeb-pulse = { git = "https://github.com/djg/cubeb-pulse-rs", branch = "dev", optional = true, features = ["pulse-dlopen"]}


[build-dependencies]
cc = "1.0"

[features]
default = ["audio-sample-type-f32"]
audio-sample-type-s16 = []
audio-sample-type-f32 = []
alsa = []
pulseaudio = ["cubeb-pulse"]
jack = []
